fixed cards, padding on mobile info page

--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -94,6 +94,10 @@ h1 {
 			.progress-bars {
 				width: 100%;
 			}
+
+			& > div {
+				padding: 0;
+			}
 		}
 	}
 
